--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="hero-stats">
                     <div class="stat">
                         <h3>30+</h3>
-                        <p>Mobil Sport</p>
+                        <p>Mobil</p>
                     </div>
                     <div class="stat">
                         <h3>18+</h3>
@@ -139,14 +139,13 @@
     <!-- Cars Section -->
     <section id="cars" class="cars">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Koleksi Mobil Sport Kami</h2>
-            <p class="section-subtitle" data-aos="fade-up">Pilih mobil sport impian Anda untuk disewa - Total 30 unit tersedia</p>
+            <h2 class="section-title" data-aos="fade-up">Koleksi Mobil Kami</h2>
+            <p class="section-subtitle" data-aos="fade-up">Pilih mobil impian Anda untuk disewa - Total 30 unit tersedia</p>
             
             <div class="filter-buttons" data-aos="fade-up">
                 <button class="filter-btn active" data-filter="all">Semua</button>
                 <button class="filter-btn" data-filter="family">Family</button>
                 <button class="filter-btn" data-filter="travel">Travel</button>
-                <button class="filter-btn" data-filter="supercar">Supercar</button>
             </div>
             
             <!-- Recommended Cars -->
@@ -263,7 +262,7 @@
                     <label for="vehicle-type">Jenis Kendaraan</label>
                     <select id="vehicle-type">
                         <option value="">-- Pilih Jenis --</option>
-                        <option value="car">Mobil Sport</option>
+                        <option value="car">Mobil</option>
                         <option value="bus-small">Bus Kecil (15-20 Seat)</option>
                         <option value="bus-medium">Bus Medium (25-30 Seat)</option>
                         <option value="bus-large">Bus Besar (40-45 Seat)</option>
