--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#home" class="nav-link">Beranda</a></li>
-                    <li class="nav-item"><a href="#cars" class="nav-link">Mobil Sport</a></li>
+                    <li class="nav-item"><a href="#cars" class="nav-link">Mobil</a></li>
                     <li class="nav-item"><a href="#buses" class="nav-link">Bus Pariwisata</a></li>
                     <li class="nav-item"><a href="#services" class="nav-link">Layanan</a></li>
                     <li class="nav-item"><a href="#promo" class="nav-link">Promo</a></li>
